# providers-api

./: .gitignore  LICENSE.md  Makefile  README.md  SECURITY.md  my.db  pyproject.toml  setup.cfg
.github/workflows/: ci-cd.yml  codeql.yml  dependency-review.yml  scorecards.yml
providers/: main.py
providers/api/: company.py  util.py
providers/db/: core.py  models.py
requirements/: common.txt  dev.txt
src/: generate_data.py  prepare_db.py
src/db/: models.py
src/providers/: main.py
src/providers/db/: core.py
