[tool.poetry]
name = "providers"
version = "1.0.0"
description = "Providers API"
authors = ["Evan Porter"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "providers", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
sqlmodel = "^0.0.24"
uvicorn = "^0.34.3"

[tool.poetry.group.dev.dependencies]
faker = "^37.4.0"
httpx = "^0.28.1"
python-slugify = "^8.0.4"

[tool.poetry.group.format.dependencies]
black = "^25.1.0"

[tool.poetry.group.import-sort.dependencies]
isort = "^6.0.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.4.0"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
include = ["src/*"]
omit = ["*tests*"]

[tool.black]
target-version = ["py311"]
exclude = """
/(
    .git
  | docs
  | htmlcov
  | .pytest_cache
  | .tox
)/
"""

[tool.isort]
profile = "black"
skip_glob = ["docs/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"