[tool.poetry]
name = "providers"
version = "1.0.0"
description = "Providers API"
authors = ["Evan Porter"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "providers", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.124.2"
sqlmodel = "^0.0.27"
uvicorn = "^0.38.0"

[tool.poetry.group.dev.dependencies]
faker = "^38.2.0"
httpx = "^0.28.1"
python-slugify = "^8.0.4"

[tool.poetry.group.format.dependencies]
black = "^25.12.0"

[tool.poetry.group.import-sort.dependencies]
isort = "^7.0.0"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
include = ["src/*"]
omit = ["*tests*"]

[tool.black]
target-version = ["py311"]
exclude = """
/(
    .git
  | docs
  | htmlcov
  | .pytest_cache
  | .tox
)/
"""

[tool.isort]
profile = "black"
skip_glob = ["docs/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"